# JobSat-Happi-3

./: README.md  manage.py  pyproject.toml  requirements.txt
happinometer/: asgi.py  settings.py  urls.py  wsgi.py
main/: tests.py  views.py
main/templates/main/: index.html
